--- a/html.html
+++ b/html.html
@@ -561,8 +561,8 @@
             </div>
         </section>
     </div>
-    <div class="backg_black pY4_375r ">
-        <footer class="footer center_auto ">
+    <div class="backg_black  ">
+        <footer class="pY5_375r center_auto  flex ">
             <div class="w_25">
 
                 <div class=" flex alignCenter mb_1_875r">
@@ -632,8 +632,45 @@
                     </span>
                 </div>
             </div>
+            <div class="ml_8_4375r flex__column">
+                <a class="mb_2_5r f_1__fw700__lh_150__colfff" href="#">Pages</a>
+                <a class="f_1__fw400__lh_150__colDBDFD0 mb_1_25r" href="#">Home</a>
+                <a class="f_1__fw400__lh_150__colDBDFD0 mb_1_25r" href="#">Menu</a>
+                <a class="f_1__fw400__lh_150__colDBDFD0 mb_1_25r" href="#">About</a>
+                <a class="f_1__fw400__lh_150__colDBDFD0 mb_1_25r" href="#">Pricing</a>
+                <a class="f_1__fw400__lh_150__colDBDFD0 mb_1_25r" href="#">Blog</a>
+                <a class="f_1__fw400__lh_150__colDBDFD0 mb_1_25r" href="#">Contact</a>
+                <a class="f_1__fw400__lh_150__colDBDFD0" href="#">Delivery</a>
+            </div>
 
+            <div class="ml_7_5r flex__column">
+                <a class="mb_2_5r f_1__fw700__lh_150__colfff" href="#">Utility Pages</a>
+                <a class="f_1__fw400__lh_150__colDBDFD0 mb_1_25r" href="#">Start Here</a>
+                <a class="f_1__fw400__lh_150__colDBDFD0 mb_1_25r" href="#">Styleguide</a>
+                <a class="f_1__fw400__lh_150__colDBDFD0 mb_1_25r" href="#">Password Protected</a>
+                <a class="f_1__fw400__lh_150__colDBDFD0 mb_1_25r" href="#">404 Not Found</a>
+                <a class="f_1__fw400__lh_150__colDBDFD0 mb_1_25r" href="#">Licenses</a>
+                <a class="f_1__fw400__lh_150__colDBDFD0 mb_1_25r" href="#">Changelog</a>
+                <a class="f_1__fw400__lh_150__colDBDFD0" href="#">View More</a>
+            </div>
+
+            <div class="ml_8_4375r">
+                <h1 class="f_1__fw700__lh_150__colfff mb_2_5r">Follow Us On Instagram</h1>
+                <div class="flex  column_gap1_25 mb_1_25r">
+                    <img src="img/pexels-steve-3789885 1.png" alt="pexels">
+                    <img src="img/eiliv-aceron-d5PbKQJ0Lu8-unsplash 1.png" alt="eiliv">
+                </div>
+                <div class="flex  column_gap1_25 ">
+                    <img src="img/pexels-ella-olsson-1640772 1.png" alt="pexels">
+                    <img src="img/pexels-ash-376464 1.png" alt="eiliv">
+                </div>
+            </div>
         </footer>
+        <div class="border_414536 center_auto mb_1_875r"></div>
+        <h1 class=" center_auto f_1__fw400__lh_150__colADB29E justifyCenter pb3_375r">Copyright © 2023 Hashtag
+            Developer. All
+            Rights Reserved
+        </h1>
     </div>
 </body>
 
